src/test/deca/context/invalid/expr_cast_int_to_boolean.deca
// Test of the rule (3.39) : can't cast int to boolean.

{
	boolean var1;
	int var2;
	var1 = (boolean)(var2);
}

// Résultat :
//# a
